# SF6-skills

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  flake.nix  mise.toml  pyproject.toml
ingest/frame_data/: README.md  pyproject.toml
ingest/frame_data/config/: characters.yaml  fetch_profiles.yaml
ingest/frame_data/config/binding_policy/: aki.supercombo.yaml  alex.supercombo.yaml  blanka.supercombo.yaml  cammy.supercombo.yaml  chunli.supercombo.yaml  cviper.supercombo.yaml  deejay.supercombo.yaml  dhalsim.supercombo.yaml  ed.supercombo.yaml  ehonda.supercombo.yaml  elena.supercombo.yaml  gouki_akuma.supercombo.yaml  guile.supercombo.yaml  jamie.supercombo.yaml  jp.supercombo.yaml  juri.supercombo.yaml  ken.supercombo.yaml  kimberly.supercombo.yaml  lily.supercombo.yaml  luke.supercombo.yaml  mai.supercombo.yaml  manon.supercombo.yaml  marisa.supercombo.yaml  rashid.supercombo.yaml  ryu.supercombo.yaml  sagat.supercombo.yaml  terry.supercombo.yaml  vega_mbison.supercombo.yaml  zangief.supercombo.yaml
ingest/frame_data/config/registry/: aki.moves.yaml  alex.moves.yaml  blanka.moves.yaml  cammy.moves.yaml  chunli.moves.yaml  cviper.moves.yaml  deejay.moves.yaml  dhalsim.moves.yaml  ed.moves.yaml  ehonda.moves.yaml  elena.moves.yaml  gouki_akuma.moves.yaml  guile.moves.yaml  jamie.moves.yaml  jp.moves.yaml  juri.moves.yaml  ken.moves.yaml  kimberly.moves.yaml  lily.moves.yaml  luke.moves.yaml  mai.moves.yaml  manon.moves.yaml  marisa.moves.yaml  rashid.moves.yaml  ryu.moves.yaml  sagat.moves.yaml  terry.moves.yaml  vega_mbison.moves.yaml  zangief.moves.yaml
ingest/frame_data/src/sf6_ingest/: __init__.py  binding_policy.py  cli.py  config.py  registry.py  (+4 more)
ingest/frame_data/tests/: conftest.py  supercombo_fixture.py  test_core_parse.py  test_import_no_fetch.py  test_prune.py  test_publish_policy.py  test_registry.py  test_roster.py  test_supercombo_binding_generation.py
(+3361 files in other folders)
