[project]
name = "sf6-skills"
version = "0.1.0"
description = "Karpathy-style LLM Wiki tooling for SF6 source capture."
requires-python = ">=3.11"
dependencies = [
  "scrapling[all]>=0.4.8",
  "sympy>=1.14.0",
  "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[tool.uv]
package = false
